# fun-pytorch

./: .gitignore  README.md  main.py
sc-screenshot-classify/: Notebook.ipynb  jupyter.bat  lib.py  pyproject.toml  scratchpad.ipynb
text-to-speech-kokoro/: pyproject.toml
