[project]
name = "fun-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.31.0",
    "munch>=4.0.0",
    "phonemizer>=3.3.0",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]
